changes to make jepsen work in lab
- http port
- systemd-timesync instead of chrony
- ntp hostname
- jdk11 package fixes
- paths
- advertise addr